# Rust

./: .gitignore  .zenodo.json  CITATION.cff  INSTALL.md  README.md  citation.bib
.github/workflows/: fh.yml
cargo/: config.toml
docs/: CompilerComparison.md  OnRust.md
ontrack-rs/: Cargo.toml  README.md
ontrack-rs/ontrack-cli/: Cargo.toml
ontrack-rs/ontrack-cli/src/: main.rs
ontrack-rs/ontrack-core/: Cargo.toml
ontrack-rs/ontrack-core/src/: config.rs  exporter.rs  geocoder.rs  lib.rs  matrix.rs  parser.rs  solver.rs  voice.rs
ontrack-rs/ontrack-gui/: Cargo.toml
ontrack-rs/ontrack-gui/src/: main.rs
ontrack-rs/ontrack-installer/: Cargo.toml
ontrack-rs/ontrack-installer/src/: main.rs
scripts/: quickstart.sh
