[package]
name        = "ontrack-cli"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true
description = "OnTrack CLI — TDS field route optimizer (command-line interface)"

[[bin]]
name = "ontrack"
path = "src/main.rs"

[dependencies]
ontrack-core = { path = "../ontrack-core" }

tokio       = { workspace = true }
reqwest     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI argument parsing
clap        = { version = "4", features = ["derive", "env"] }

# Terminal progress bars and spinners
indicatif   = "0.17"

# Coloured terminal output
colored     = "2"

# Open URLs in default browser
open        = "5"
