[package]
name        = "ontrack-core"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
description = "Core route optimization logic for OnTrack (geocoding, matrix, solver, export)"

[dependencies]
tokio       = { workspace = true }
reqwest     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
dotenvy     = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
csv         = { workspace = true }
urlencoding = { workspace = true }
tracing     = { workspace = true }

# Math
libm = "0.2"

# Audio capture (cross-platform: ALSA/PipeWire-ALSA on Linux, WASAPI on Win,
#  CoreAudio on mac/iOS, Oboe on Android).
# Requires: libasound2-dev on Debian/Ubuntu · alsa-lib on Arch/Fedora
cpal = "0.17"

# Whisper.cpp bindings for on-device speech transcription (fully offline).
# whisper.cpp is built from source via the build.rs; requires a C++ compiler.
whisper-rs = "0.16"

# Home directory for model cache path
dirs-next = "2"

[features]
# Build the voice recognition module (requires libasound2-dev + C++ compiler).
# Enabled by default; disable with --no-default-features if building without audio.
default  = ["voice"]
voice    = []

[dev-dependencies]
tempfile = "3"
