[package]
name        = "ontrack-gui"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true
description = "OnTrack GUI — TDS field route optimizer (egui desktop app)"

[[bin]]
name = "ontrack-gui"
path = "src/main.rs"

[dependencies]
ontrack-core = { path = "../ontrack-core" }

tokio       = { workspace = true }
reqwest     = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }

# GUI framework
eframe      = { version = "0.27", features = ["default_fonts", "persistence"] }
egui        = "0.27"
egui_extras = { version = "0.27", features = ["image"] }

# Image loading for map preview tiles
image       = { version = "0.25", features = ["png"] }

# Open URLs in browser
open        = "5"

# Native file dialogs
rfd         = "0.14"

# URL encoding (direct dep — used inline in gui)
urlencoding = { workspace = true }

# Channel for background → UI thread messages
crossbeam-channel = "0.5"

# Config loading
dotenvy     = { workspace = true }
